--- a/style.css
+++ b/style.css
@@ -6,12 +6,24 @@
 html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+h1{
+    color: #362c2c;
+}
 main{
     width: 80%;
     margin: auto;
     margin-top: 50px;
+    border-radius: 25px;
+    background: rgb(236, 236, 236);
+    padding: 25px;
+    box-shadow: 5px 5px 17px #afafaf8e;
 }
 ul{
     list-style: none;
     margin-top: 25px;
+}
+.horizontal-line{
+    width: 100%;
+    transform: translateX(-25px);
+    border-bottom: 1px solid #362c2c;
 }
